--- a/src/scss/pageActivity/pageBranch/_md.scss
+++ b/src/scss/pageActivity/pageBranch/_md.scss
@@ -1,5 +1,15 @@
 @include respones(md) {
 	//在此輸入內容
 
+.a-add-container{
+
+	// width: 996px;
+	// margin: auto;
+	// height: 90%;
+}
+#a-add-cover{
+	width: 98%;
+}
+
 
 }
