--- a/src/scss/pageActivity/pageBranch/_xs.scss
+++ b/src/scss/pageActivity/pageBranch/_xs.scss
@@ -1,13 +1,84 @@
 @include respones(xs) {
 	//在此輸入內容
-
-
-
-
-
-
-
-
-
-
+.a-add-container{
+	width: 100%;
 }
+#a-add-section1{
+	width: 90%;
+}
+.a-page{
+	width: 90%;
+}
+.a-add-mapControl{
+	height: auto;
+	padding: 20px 0;
+}
+#a-add-cover{
+	width: 98%;
+	height:85%;
+}
+.a-top25{
+	top: 10%;
+}
+#fp-nav{
+	display: none;
+}
+#a-add-section2{
+	width: 100%;
+}
+.pignose-calendar-body{
+	height: 214px;
+}
+.a-add-darkCover{
+	height: 367px;display: none;
+}
+.a-add-darkCover .calendar-dark{
+	
+}
+#a-add-lgDate{
+	display: none;
+}
+#a-add-phoneDate{
+	display: block;
+}
+.a-add-item{
+	.a-add-class{
+		width: 50px;
+		height: 50px;
+	}
+	.a-relative{
+		height: 50%;
+	}
+	.a-add-put{
+		height: 100%;
+		margin: 0;
+		top: 100px;
+	}
+}
+.a-add-cTitle{
+font-size: 12px;
+}
+.a-add-classCover{
+	top: 200px;
+}
+.a-add-form{
+	margin: 10px 0;
+	textarea{
+		height: 200px;
+	}
+}
+.a-add-item{
+	.a-add-drag{
+		display: none;
+	}
+}
+.a-add-write{
+	margin-top: 100px;
+}
+
+
+
+
+
+
+}//end
