--- a/src/libs/fullpage.js/jquery.fullPage.css
+++ b/src/libs/fullpage.js/jquery.fullPage.css
@@ -140,7 +140,7 @@ html.fp-enabled,
 .fp-slidesNav ul li {
     display: block;
     width: 14px;
-    height: 13px;
+    height: 32px;
     margin: 7px;
     position:relative;
 }
@@ -161,11 +161,12 @@ html.fp-enabled,
 .fp-slidesNav ul li a.active span,
 #fp-nav ul li:hover a.active span,
 .fp-slidesNav ul li:hover a.active span{
-    height: 12px;
-    width: 12px;
-    margin: -6px 0 0 -6px;
+    height: 20px;
+    width: 20px;
+    margin: -10px 0 0 -10px;
     border-radius: 100%;
  }
+
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
     border-radius: 50%;
@@ -174,7 +175,7 @@ html.fp-enabled,
     height: 4px;
     width: 4px;
     border: 0;
-    background: #333;
+    background: #86D4F5;
     left: 50%;
     top: 50%;
     margin: -2px 0 0 -2px;
@@ -185,9 +186,9 @@ html.fp-enabled,
 }
 #fp-nav ul li:hover a span,
 .fp-slidesNav ul li:hover a span{
-    width: 10px;
-    height: 10px;
-    margin: -5px 0px 0px -5px;
+    width: 16px;
+    height: 16px;
+    margin: -8px 0px 0px -8px;
 }
 #fp-nav ul li .fp-tooltip {
     position: absolute;
