--- a/src/scss/pageActivity/pageBranch/_addACT.scss
+++ b/src/scss/pageActivity/pageBranch/_addACT.scss
@@ -47,10 +47,11 @@
 
 
 .a-add-put{
-	margin-top: 10%;	
+	// margin-top: 38%;	
+	top: 200px;
 	position: relative;
-	width: 90%;
-	height: 82%;
+	width: 100%;
+	height: 60%;
 	border-radius:20px;
 	background-color: rgba(100,100,100,0.5);
 	box-shadow: 0px 0px 20px #ccc;
@@ -59,8 +60,9 @@
 	// background-position:center center;
 }
 .a-add-container{
-	width: 100%;
-	height: 100%;
+	width: 80%;
+	margin: auto;
+	height: 90%;
 }
 .selected{
 	position: relative;
@@ -276,6 +278,8 @@
 	position: relative;
 	margin-bottom: 20px;
 	text-align: center;
+	// float: left;
+	display: inline-block;
 	height: 200px;
 	width: 200px;
 	box-shadow: 0px 0px 20px #ccc;
@@ -335,19 +339,23 @@
 // 		background-size: 200%;
 // 	}
 // }
+.a-add-classCover{
+	width: 100%;
+	height: 100%;
+	top: 40%;
+}
 .a-add-google{
 	.googleMap{
 		height: 100%;
 	}
 }
 .a-add-write{
-	margin-top: 30px;
+	margin-top: 200px;
 	// .a-text{
 	// 	margin-bottom: 20px;
 	// }	
 }
-
-.a-add-title{
+add-title{
 	// padding-bottom: 10px;
 	font-size: $fz-h2;
 	position: absolute;
@@ -368,15 +376,81 @@
 	}
 }
 #a-add-dark{
-	margin: 50px 0px 0 80px;
-	box-shadow: 0px 0px 20px #ccc;	
+	// margin: 50px 0px 0 80px;
+	// width: 80%;
+	// height: 80%;		
+	// max-width:400px;
+	// position: relative;
+			  // top: 18%;
+			  // left: 0;
+			  // right: 0;
+			  margin: auto;
+		
+}
+.a-abc{
+	position: absolute;
+			  top: 0;
+			  bottom: 0;
+			  left: 0;
+			  right: 0;
+			  margin: auto;
+}
+.a-top25{
+	top: 20%;
+}
+.a-add-darkCover{
+	height: 421px;
+	width: 90%;
+	// position: absolute;
+			  top: 0;
+			  bottom: 0;
+			  left: 0;
+			  right: 0;
+			  margin: auto;
+	box-shadow: 0px 0px 20px #ccc;
+}
+#a-add-phoneDate{
+	display: none;
+}
+.a-add-date{
+	width: 90%;
+	height: 421px;
+	text-align: center;
+	// position: absolute;
+	margin: auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color:rgba(255,255,255,0.2);
+	box-shadow: 0px 0px 20px #ccc;
+	.a-add-timePicker{
+		padding-left: 0 !important;
+		color:#000;
+		text-align: center;
+		padding: 0;	
+		width: 100px;
+		background-color: none;	
+	}
+	.a-text{
+		font-size: $fz-h1;
+		margin-bottom: 50px;
+		padding-top: 50px;
+		width: 100%;	
+		text-align: center;	
+	}
+	.a-add-content{
+		height: 48px;	
+		line-height: 2;
+		font-size: $fz-h4;
+	}
 }
 .a-add-google{
 	height: 100%;	
 }
 .a-add-map{
 	
-	margin-top: 10px;
+	// margin-top: 10px;
 	text-align: center;
 	// margin: auto;
 	// padding: 20px 0;
@@ -391,17 +465,37 @@
 		color:#000;
 	}
 	i{
-		top: 5px;
+		// top: 5px;
 	}
 }
 .a-add-mapControl{
-	height: 50px;
+	// height: 50px;
+	padding: 0px;
+	box-sizing:border-box;
 	width: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index:10;
 	background-color:rgba(69,93,109,0.5);
+}
+.a-add-mapContent{
+	position: relative;
+	box-sizing:border-box;
+	padding: 10px;
+}
+.a-add-inputCover{
+	display: inline-block;
+	position: relative;
+}
+#a-add-searchIcon,
+.a-add-mapI{
+	color:#FFBC2C;
+	position: absolute;
+	top: 4px;
+	left: 4px;
+	
+	margin: auto;
 }
 .events-content{
 	ol{
@@ -428,44 +522,23 @@
 #a-dateTime2{
 	// display: inline-block;
 }
-.a-add-date{
-	width: 70%;
-	height: 421px;
-	text-align: center;
-	position: absolute;
-	margin: auto;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color:rgba(255,255,255,0.2);
-	box-shadow: 0px 0px 20px #ccc;
-	#a-timePicker{
-		color:#000;
-		text-align: center;
-		padding: 0;	
-		width: 100px;
-		background-color: none;	
-	}
-	.a-text{
-		font-size: $fz-h1;
-		margin-bottom: 50px;
-		padding-top: 50px;
-		width: 100%;	
-		text-align: center;	
-	}
-	.a-add-content{
-		height: 48px;	
-		line-height: 2;
-		font-size: $fz-h4;
-	}
-}
+
 .a-add-outside{
 
 	position: absolute;
 			  width: 100%;	
 			  height: 100%;	
 	z-index: 50;
+}
+#a-add-cover{
+	width: 70%;
+	height: 80%;
+	position: absolute;
+			  top: 10%;
+			  bottom: 0;
+			  left: 0%;
+			  right: 0;
+			  margin: auto;
 }
 .a-add-mainCover{
 	// background-color: rgba(255,255,255,0.2);
@@ -488,8 +561,8 @@
 				  left: -5%;
 				  right: 0;
 				  margin: auto;	
-		border-top:2px solid rgba(255,255,255,0.5);
-		border-bottom:2px solid rgba(255,255,255,0.5);
+		// border-top:2px solid rgba(255,255,255,0.5);
+		// border-bottom:2px solid rgba(255,255,255,0.5);
 		
 	}
 	&:after{
@@ -525,7 +598,6 @@
 
 }
 .a-add-page{
-	top:5%;
 	width:600%;
 	height: 100%;
 	/*background-color: #fa0;*/
@@ -542,7 +614,10 @@
 	}
 }
 #a-add-section6{
+	width: 80%;
+	height: 80%;
 	background:url(../img/a_016.jpg);
+	background-position: right center;
 	background-size: cover;
 	text-align: center;	
 	.a-bigTitle{
@@ -720,30 +795,30 @@
 		right: 0;
 		color:#E88D00;
 	}
-	&:before{
-		content: '';
-		display: block;
-		height: 303px;
-		width: 2px;
-		position: absolute;
-					  bottom: 90px;
-					  left: 1px;
-					  right: 0;
-					  margin: auto;	
-		background-color: rgba(255,255,255,0.5);	
-	}
-	&:after{
-		content: '';
-		display: block;
-		height: 303px;
-		width: 2px;
-		position: absolute;
-					  top: 90px;
-					  left: 1px;
-					  right: 0;
-					  margin: auto;	
-		background-color: rgba(255,255,255,0.5);	
-	}
+	// &:before{
+	// 	content: '';
+	// 	display: block;
+	// 	height: 303px;
+	// 	width: 2px;
+	// 	position: absolute;
+	// 				  bottom: 90px;
+	// 				  left: 1px;
+	// 				  right: 0;
+	// 				  margin: auto;	
+	// 	background-color: rgba(255,255,255,0.5);	
+	// }
+	// &:after{
+	// 	content: '';
+	// 	display: block;
+	// 	height: 303px;
+	// 	width: 2px;
+	// 	position: absolute;
+	// 				  top: 90px;
+	// 				  left: 1px;
+	// 				  right: 0;
+	// 				  margin: auto;	
+	// 	background-color: rgba(255,255,255,0.5);	
+	// }
 }
 #a-add-rightBtn{
 	i{
@@ -762,30 +837,30 @@
 			  bottom: 0;
 			  right: -7.2%;
 			  margin: auto;
-	&:before{
-		content: '';
-		display: block;
-		height: 303px;
-		width: 2px;
-		position: absolute;
-					  bottom: 90px;
-					  left: 0px;
-					  right: 1px;
-					  margin: auto;	
-		background-color: rgba(255,255,255,0.5);	
-	}
-	&:after{
-		content: '';
-		display: block;
-		height: 303px;
-		width: 2px;
-		position: absolute;
-					  top: 90px;
-					  left: 0px;
-					  right: 1px;
-					  margin: auto;	
-		background-color: rgba(255,255,255,0.5);	
-	}
+	// &:before{
+	// 	content: '';
+	// 	display: block;
+	// 	height: 303px;
+	// 	width: 2px;
+	// 	position: absolute;
+	// 				  bottom: 90px;
+	// 				  left: 0px;
+	// 				  right: 1px;
+	// 				  margin: auto;	
+	// 	background-color: rgba(255,255,255,0.5);	
+	// }
+	// &:after{
+	// 	content: '';
+	// 	display: block;
+	// 	height: 303px;
+	// 	width: 2px;
+	// 	position: absolute;
+	// 				  top: 90px;
+	// 				  left: 0px;
+	// 				  right: 1px;
+	// 				  margin: auto;	
+	// 	background-color: rgba(255,255,255,0.5);	
+	// }
 }
 .a-add-page{
 	position: relative;
@@ -804,9 +879,9 @@
 	width: 100%;
 }
 #a-add-section2{
-	
-	height: 100%;
-	width: 100%;
+	margin: auto;
+	height:80%;
+	width:80%;
 }
 #a-add-section3{
 	position: absolute;
@@ -830,5 +905,53 @@
 	width: 100%;
 }
 .a-page{
+	top: 8%;
+	position: relative;
+
 	font-size: 20px;	
+}
+#a-add-menu{
+    z-index: 10;
+    position: fixed;
+    top:100px;
+    left:0;
+
+    li{
+    	display: inline-block;
+    }
+}
+// #a-add-section1{
+// 	width: 100%;	
+// 	height: 80%;	
+// 	margin: auto;
+// }
+.a-add-google{
+	position: relative;	
+}
+.section{
+	position: relative;
+}
+.a-add-intro{
+	position: absolute;
+			  top: 0;
+			  bottom: 0;
+			  left: 0;
+			  
+			  margin: auto;
+
+}
+#section4{
+	#a_1activity_wrapper{
+		margin: auto;
+		position: relative;
+		top: 40px;
+		width: 80%;
+		height: 80%;
+		overflow-y:scroll;
+		overflow-x:hidden;
+		.aa_banner{
+			margin-top: 0;
+		}
+	}
+
 }
