--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -1,3 +1,13 @@
+@import "assets/var";
+@import "assets/reset";
+@import "assets/color";
+@import "assets/font";
+@import "assets/mixin/mixin";
+@import "assets/common";
+@import "assets/grid";
+@import "../libs/font-awesome/css/font-awesome.min.css";
+@import "layout/layout";
+
 @include respones(xs) {
     #i-body {
         // overflow: hidden;
