--- a/src/scss/pageIndex/_lg.scss
+++ b/src/scss/pageIndex/_lg.scss
@@ -130,6 +130,9 @@
                 margin: 20px auto;
                 text-align: center;
                 line-height: $fz-p;
+                color: $white;
+                text-shadow: 1px 1px 3px $grey;
+                font-size: $fz-p;
                 a {
                     color: $white;
                     text-shadow: 1px 1px 3px $grey;
