--- a/src/scss/pageIndex/_md.scss
+++ b/src/scss/pageIndex/_md.scss
@@ -94,7 +94,8 @@
             right: 0;
             margin: 220px auto;
             padding: 10px;
-            width: 400px;
+            width:90%;
+            max-width: 400px;
             text-align: center;
             border-radius: 5px;
             box-shadow: 0px 0px 10px 1px $white;
@@ -108,7 +109,8 @@
             input {
                 border: none;
                 height: 40px;
-                width: 320px;
+                width:90%;
+                max-width: 320px;
                 border-radius: 5px;
                 margin: 10px auto;
                 font-size: 16px;
@@ -130,6 +132,9 @@
                 margin: 20px auto;
                 text-align: center;
                 line-height: $fz-p;
+                color: $white;
+                text-shadow: 1px 1px 3px $grey;
+                font-size: $fz-p;
                 a {
                     color: $white;
                     text-shadow: 1px 1px 3px $grey;
@@ -463,6 +468,7 @@
             }
             .starfield {
                 position: absolute;
+                display:block;
                 width: 100%;
                 height: 90%;
                 top: 0;
