--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@
 
 @import "layout/layout";
 @import "pageIndex/pageIndex";
-@import "pageActivity/pageActivity";
+// @import "pageActivity/pageActivity";
 @import "pageForum/pageForum";
 @import "pagePhoto/pagePhoto";
 @import "pageKnowledge/pageKnowledge";
