--- a/src/scss/pageForum/_pageForum.scss
+++ b/src/scss/pageForum/_pageForum.scss
@@ -6,6 +6,8 @@
 
 //此處為 共用設定
 
+
+
 html, body{
 		// padding: 0px;
 	}
@@ -28,7 +30,7 @@ html, body{
 
 	#f_section1{
 			color: $white;
-			height: 45vh;
+			height: 60vh;
 			// background-color: #333;
 			// background: linear-gradient(to bottom,  #11e8bb 0%,#8200c9 100%); 
 			// background-image: url(../img/forum/f_001.jpg);
@@ -59,12 +61,14 @@ html, body{
 			text-align: center;
 			display: inline-block;
 			vertical-align: middle;
-			position: absolute;
-			top: 0;
+			// position: absolute;
+			position: fixed;
+			top: -40%;
 			bottom: 0;
 			left: 0;
 			right: 0;
 			margin: auto;
+			
 			// opacity: 0;
 			// transform:Scale(0.1);
 			// animation: titleshow 1s all;
@@ -80,12 +84,16 @@ html, body{
 		.f_desc{
 			width: 70%;
 			height: 30%;
-			position: absolute;
-			top: 70%;
+			// position: absolute;
+			position: fixed;
+			top: -5%;
 			bottom: 0;
 			left: 0;
 			right: 0;
 			margin:auto;
+			
+
+		
 
 			h3{
 				font-size: $fz-h4;
@@ -104,15 +112,18 @@ html, body{
 			}
 
 		}
+
+
 	}
 
 
 	//forum content start
 	#f_section2{
-		height: 100vh;
+		// height: 100vh;
 		position: relative;
-		// background-color: #333;
+		background: radial-gradient(ellipse at center, rgba(31, 76, 116, .6) 0%, rgba(21, 28, 60, .7) 30%, rgba(9, 10, 15, 0.7) 60%, rgba(0,0,0,.5) 80%);
 		// background-image: url(../img/forum/f_001.jpg);
+		padding-top: 30px;
 		#f_tab_area{
 			// background-color: #000;
 			width: 100%;
@@ -330,10 +341,11 @@ html, body{
 										margin-right:10px;
 
 										a{
-											color: rgba(70, 130, 180, 1.0); 
+											color: #86d4f5;
 
 											&:hover{
-												color: #86d4f5;; 
+												
+												text-decoration: underline;
 											}
 										}
 										
@@ -548,6 +560,66 @@ html, body{
 	}
 
 // 個別貼文
+
+// 0221 start
+.ff_post{
+	width: 200px;
+	height: 200px;
+	position: relative;
+	perspective: 1000px;
+	margin: auto;
+	font-size: 30px;
+
+
+	#box{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		transform-style: preserve-3d;	
+		top: 20px;
+
+	}
+
+		#box figure {
+		  display: block;
+		  position: absolute;
+		  border: 2px solid black;
+		}
+		 
+		#box .front,
+		#box .back {
+		  width: 750px;
+		  height: 150px;
+		  background-color:rgba(0,255,255,.5);
+		  border: 1px solid #fff;
+		}
+		 
+		#box .right,
+		#box .left {
+		  width: 96px;
+		  height: 150px;
+		  left: 100px;
+		  background-color: #000;
+		   border: 1px solid #fff;
+
+		}
+		 
+		#box .top,
+		#box .bottom {
+		  width: 750px;
+		  height: 96px;
+		  top: 50px;
+		} 
+
+		#box .front  { transform: rotateY(   0deg ) translateZ(  50px ); }
+		#box .back   { transform: rotateX( 180deg ) translateZ(  50px ); }
+		#box .right  { transform: rotateY(  90deg ) translateZ( 600px ); }
+		#box .left   { transform: rotateY( -90deg ) translateZ( 150px ); }
+		#box .top    { transform: rotateX(  90deg ) translateZ( 100px ); }
+		#box .bottom { transform: rotateX( -90deg ) translateZ( 100px ); }        
+}
+
+// 0221 end
 
 
 
