--- a/src/scss/pageKnowledge/_xs.scss
+++ b/src/scss/pageKnowledge/_xs.scss
@@ -19,7 +19,7 @@
 					font-size: 18px;
 					padding-bottom: 10px;
 					margin-bottom: 10px;
-					border-bottom: 3px solid rgba(255,255,255,.6);
+					// border-bottom: 3px solid rgba(255,255,255,.6);
 					font-weight: 600;
 					text-shadow:1px 1px 1px #000;
 				}
