--- a/src/scss/pageKnowledge/_pageKnowledge.scss
+++ b/src/scss/pageKnowledge/_pageKnowledge.scss
@@ -1,5 +1,8 @@
 #kn_wrapper{
 	// padding-bottom: 200px;
+	#f_section1{
+		height: 40vh;
+	}
 	.kn_content{
 		color: #fff;
 		width: 100%;
@@ -12,13 +15,17 @@
 
 			.kn-p{
 				width: 45%;
-				padding: 20px 25px;
+				padding: 50px 25px;
 				// float: left;
 				background-color: rgba(0,0,0,.5);
-				margin-bottom: 100px;
+				margin-bottom: 200px;
 				box-shadow: 10px 10px 2px rgba(255,255,255,.5);
 				border: 1px solid #000;
 				letter-spacing: 0.2em;
+				position: relative;
+				bottom: -200px;
+				opacity: 0;
+
 
 				a{
 					color: $white;
@@ -27,6 +34,8 @@
 						color: #333;
 					}
 				}
+
+				
 
 				
 
@@ -46,7 +55,7 @@
 						content: '';
 						width: 15%;
 						// height: 5px;
-						border: 2px solid #555;
+						border: 2px solid #daaf73;
 						position: absolute;
 						bottom: 0;
 						left: 0;
@@ -66,56 +75,57 @@
 				}
 
 				&:hover{
-					background-color: $white;
+					// background-color: rgba(255,255,255,.1);
 					border:#fff;
-					color: #333;
+					color: #daaf73;
 					text-shadow:0px 0px 1px #000;
 					// box-shadow: -10px -10px 0px #000;
 					// transition:1s box-shadow;
 
 					.text{
-						color: #333;
+						// color: #333;
 					}
 
 					a{
-						color: #333;
+						color: #daaf73;
 					}
+				}
+
+				&.kn-effect{
+					opacity: 1;
+					transition:1s;
+					bottom: 0;
 				}
 			}
 			.kn-p:nth-child(odd){
 				float: left;
-				margin-top: 20px;
+				margin-top: 50px;
 				box-shadow: -10px 10px 2px rgba(255,255,255,.5);
+				
+				
 			}
 
 			.kn-p:nth-child(even){
 				float: right;
-				margin-top: 100px;
+				margin-top: 200px;
+				
+				
 			}
 		}
 	}
+	#ff_lightbox .content .main{
+		background-color: rgba(0,0,0,0);
+	}
 
 	.kn_one_post{
-		// background-color: rgba(51, 51, 51, .5);
-		color: $white;
-		letter-spacing: 0.2em;
-		// margin-bottom: 100px;
-		padding-bottom: 150px;
-		padding-top: 10px;
-		width: 100%;
-
-		.mfp-close{
-			color: #fff;
-			position: absolute;
-			top: 100px;
-			// right: -50px;
-			font-weight: 800;
-			font-size: 32px;
+	
+		.post{
+			padding: 50px;
 		}
 
 		.content{
 			padding: 30px;
-			width: 80%;
+			width: 100%;
 			margin: auto;
 			text-align: center;
 		}
@@ -220,7 +230,7 @@
 			border-top: 2px solid rgba(255,255,255,.5);
 			.kn-title{
 				width: 100%;
-				border-bottom: 2px solid rgba(255,255,255,.5);
+				// border-bottom: 2px solid rgba(255,255,255,.5);
 				h4{
 					display: inline-block;
 					padding-bottom: 8px;
@@ -292,13 +302,15 @@
 		
 		}
 	}
+
+
 		
 }
 
 
 @import "xs";
-@import "sm";
-@import "md";
+// @import "sm";
+// @import "md";
 @import "lg";
 
 
