0223活動頁—個別活動燈箱修正完畢（只有第一個活動的a有燈箱連結  .ff_lightbox_link  ）

--- a/src/scss/pageActivity-1/_activity-1.scss
+++ b/src/scss/pageActivity-1/_activity-1.scss
@@ -437,7 +437,7 @@
 	}
 
 	#a_1activity_wrapper{
-		padding-top: 100px;
+		
 		.aa_banner{
 			margin-top: 0;
 			// padding-top: 80px;
@@ -449,6 +449,15 @@
 				text-align: center;
 				font-weight: 900;
 			}
+		}
+
+		.aa_content{
+			width: 100%;
+			overflow: auto;
+			height: 100vh;
+			overflow-y: auto;
+			overflow-x:hidden;
+			padding-top: 100px; 
 		}
 	}
 
