--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -966,4 +966,5 @@
 @import "pageBranch/pageRecommend";
 @import "pageMain/maginic";
 @import "pageBranch/addACT";
+@import "pageBranch/addACT2";
 // @import "../layout/nav";
