--- a/src/scss/pageKnowledge/_xs.scss
+++ b/src/scss/pageKnowledge/_xs.scss
@@ -1,6 +1,9 @@
 @include respones(xs) {
 	//在此輸入內容
 #kn_wrapper{
+	.kn-svg{
+		display: none;
+	}
 
 	.kn_content{
 		.kn_posts{
@@ -42,7 +45,11 @@
 		.content{
 			padding: 0px;
 			width: 100%;
-			padding-top: 80px;
+			padding-top: 10px;
+		}
+
+		.post{
+			padding: 0px;
 		}
 
 		.post-info, .social-icon{
@@ -60,6 +67,7 @@
 
 		h3{
 			font-size: 18px;
+			line-height: 1.5em;
 		}
 
 		.mfp-close{
