--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,9 +9,10 @@
 
 @import "layout/layout";
 @import "pageIndex/pageIndex";
-// @import "pageActivity/pageActivity";
+
 @import "pageForum/pageForum";
 @import "pagePhoto/pagePhoto";
 @import "pageKnowledge/pageKnowledge";
 @import "pageMember/pageMember";
 @import "pageActivity-1/activity-1";
+@import "pageActivity/pageActivity";
