--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -1,40 +1,35 @@
+*{
+  // outline: 1px solid #fa0;  
+}
+.clear{
+  clear: both;
+}
+
 #admin{
   overflow: hidden;
-  background-image: linear-gradient(to top, #007adf 0%, #00ecbc 100%);
-  .logOut{
-    position: absolute;
-    top:20px;
-    right:20px;
-    width: 80px;
-    height: 40px;
-    background-color: #4f9ede;
-    text-align: center;
-    line-height: 40px;
-    font-size: 18px;
-    color:#f1f1f1;
-    border-radius: 5px;
-  }
-
+  background-image:url(../img/a_001.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 
   .main{
-    margin-top: 0px;
-    // float: left;
+    
     width: 100%;
-    height: 800px;
+    height: 950px;
     // background-color: rgba(255,255,255,0.6);
     // overflow: auto;
-    border-radius: 5px;
+    // border-radiuss: 5px;
     text-align: center;
     position: relative;
     #view{
       background-color: rgba(255,255,255,0.6);
       // width:95%;
-      max-width: 1050px;
+      width: 87%;
       height: 100%;
       overflow-y: scroll;
+      overflow-x: hidden;
       position: relative;
-      border-radius: 5px;
-      margin-top: 100px;
+      // border-radius: 5px;
+      // margin-top: 100px;
       &:after{
         content:'';
         position: absolute;
@@ -49,23 +44,27 @@
     #adminNav{
       height: 100vh;
       float: left;
-      width: 15%;
+      width: 13%;
       .adminMenu{
-        width: 110px;
-        // border: #ccc 1px solid;
+        width: 100%;
+        height: 100%;
         margin-right: 30px;
         border-radius: 5px;
         text-align: center;
-        background-color: #fff;
+        background:linear-gradient(to right, #0c3458 0%, rgba(29, 34, 60, 0.8) 40%, rgba(21, 22, 31, 0.7) 80%);
         // margin-top: 50px;
-        margin-left: 30px;
-        li{
-          height: 80px;
-          padding-top: 5px;
-          cursor: pointer;
-          +li{
-              border-top: 1px solid #ddf;
+
+        img{
+            margin-top: 30px;
           }
+        li{
+          height: 100px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          cursor: pointer;
+          margin-top: 30px;
+
+        
           &.show{
             background-image: linear-gradient(to top, #007adf 0%, #00ecbc 100%);
             .pic{
@@ -77,7 +76,7 @@
           }
           a{
             display: block;
-            color:#888;
+            color:#FFF;
             margin-top: 10px;
           }
           .pic {
@@ -85,15 +84,22 @@
             height: 40px;
             line-height: 40px;
             margin:5px auto;
-            font-size: 40px;
-            color:#aaa;
+            font-size: 36px;
+            color:#FFF;
           }
+          .out{
+            padding-top: 24px;
+          }
+        }
+        li:hover{
+          background-color: rgba(255,255,255,0.2);
+          transition:0.2s;
         }
       }
 
     }
     #memberTable,#forumTable,#actTable,#photoTable,#knowTable{
-      width: 90%;
+      width:90%;
         float: left;
         // display: none;
         position: absolute;
